--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -13,7 +13,8 @@
     "next-intl": "^3.25.1",
     "react": "^18",
     "react-dom": "^18",
-    "sharp": "^0.33.5"
+    "sharp": "^0.33.5",
+    "swiper": "^11.2.1"
   },
   "devDependencies": {
     "@types/node": "^20",
